Working on artist table, trying to fix layout issue.

--- a/client/src/Components/Tables/ArtistTable/ArtistTable.module.scss
+++ b/client/src/Components/Tables/ArtistTable/ArtistTable.module.scss
@@ -9,6 +9,9 @@
 	border-collapse: collapse;
 	border-radius: 4px;
 
+	height: auto;
+	width: 100%;
+
 	&.darkTheme {
 		background: var(--black);
 		color: var(--white);
@@ -30,6 +33,9 @@
 .tableBody {
 	display: grid;
 	vertical-align: none;
+
+	height: auto;
+	width: 100%;
 	
 }
 
